<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/capital"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/welcome_screen"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="#FF0"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/welcome_text"
                    android:textColor="@color/white"
                    android:textSize="25dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="25dp"
                android:background="#FF0">

            </View>

            <TextView
                android:id="@+id/previous_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="20dp"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textStyle="bold|italic">

            </TextView>

            <LinearLayout
                android:id="@+id/start_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_border"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/start_txt"
                    android:textColor="#FF0"
                    android:textSize="35dp"
                    android:textStyle="bold|italic">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/allthebest"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="45dp"
                    android:textStyle="bold|italic">

                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>